Set up CI with Azure Pipelines
[skip ci]

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,18 +1,15 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
-- master
+- main
 
 pool:
   name: Default
 
 steps:
-- script: echo My Gradle Application
+- script: echo My Maven Application
   displayName: 'Run a one-line script'
-- script: gradle build
-  displayName: 'Building the gradle application'
-- script: gradle run
-  displayName: 'Running gradle application'
+
+- script: mvn clean install
+  displayName: 'Building the Maven application'
+
+- script: mvn exec:java -Dexec.mainClass="com.example.Main"
+  displayName: 'Running the Maven application'
